# mrd2nii

./: README.md  pyproject.toml
mrd2nii/: __init__.py  mrd2nii_main.py  nii_utils.py  sidecar.py
mrd2nii/cli/: mrd2nii_cli.py
test/: test_mrd2nii.py  test_utils.py
test/cli/: test_cli_mrd2nii.py  test_cli_siemens_ep2d.py  test_cli_siemens_gre.py
test/stack/: test_mrd2nii_stack.py  test_mrd2nii_stack_siemens_stack.py
